# infuse-deprecated

./: .env  Cargo.toml  README.md
migrations/20160531141707_create_documents_table/: down.sql  up.sql
migrations/20160601201920_create_documents_table/: up.sql
migrations/20160601201924_create_jobs_table/: up.sql
src/: files.rs  lib.rs  main.rs  models.rs  processing.rs  serializers.rs  utils.rs  views.rs
